--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist = py27,py34
 [testenv]
-deps=
+deps =
         pytest
-commands=py.test
+        pytest-cov
+usedevelop = True
+commands = py.test --cov=http_errors --cov-report=term
