Adding html output for coverage.

--- a/tox.ini
+++ b/tox.ini
@@ -5,4 +5,4 @@ deps =
         pytest
         pytest-cov
 usedevelop = True
-commands = py.test --cov=http_errors --cov-report=term
+commands = py.test --cov=http_errors --cov-report=term --cov-report html
