Add more test for Project and fix all bugs.

--- a/http_errors/project_template/project.ini
+++ b/http_errors/project_template/project.ini
@@ -8,11 +8,11 @@ path= static/js
 path= static/css
 
 [general]
-errors= error:all
+errors= errors:all
 template_dir= templates
 output= build
 
 [errors:all]
-template= error_templates.mako
+template= error_template.mako
 codes= 404
        501
