Fix bad template name.

--- a/http_errors/project_template/project.ini
+++ b/http_errors/project_template/project.ini
@@ -13,6 +13,6 @@ template_dir= templates
 output= build
 
 [errors:all]
-template= error_template.mako
+template= error_template.djhtml
 codes= 404
        501
